Fikser cropped bug for tidslinje mot høyre

--- a/packages/tidslinje/src/components/tidslinje/Tidslinjeperiode.less
+++ b/packages/tidslinje/src/components/tidslinje/Tidslinjeperiode.less
@@ -29,9 +29,16 @@
     }
 }
 
-.avkuttet {
+.avkuttetHøyre {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    border-right-width: 0 !important;
+}
+
+.avkuttetVenstre {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left-width: 0 !important;
 }
 
 .mini {
